--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="Trilogy bootcamp homework">
-    <link rel="stylesheet" href="./Assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon: Marketing & SEO</title>
 </head>
 
